--- a/style.css
+++ b/style.css
@@ -54,7 +54,25 @@ nav {
     align-items: center;
 }
 
+.section1 > * {
+    margin-top: 20px;
+}
+
+.section1 > :last-child{
+    margin-bottom: 70px;
+}
+
 .blocks {
     display: flex;
-    width: 500px;
+    width: 600px;
+    justify-content: space-between;
+}
+
+.blocks > .block {
+    width: 120px;
+}
+
+.blocks > .block > .box {
+    height: 120px;
+    border: 2px solid blue;
 }
